<resources>
    <string name="roboto_light">sans-serif-light</string>
    <string name="number_picker_formatter">%02d</string>

    <string name="test"><b> test </b><br/>test</string>
    <string name="before">Before:</string>
    <string name="at">at:</string>
    <string name="alarm">Alarm</string>
    <string name="app_name">Student Assistant</string>
    <string name="register">Register</string>
    <string name="noHint"> </string>
    <string name="reset">Reset</string>
    <string name="today">Today:</string>
    <string name="days">day(s)</string>
    <string name="attendance">Attendance</string>
    <string name="Add">+</string>
    <string name="stop_alarm">Stop the Alarm</string>
    <string name="activity">Activity</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="reminder">Reminders</string>
    <string name="from_activity">From Activity:</string>
    <string name="day_before">day before</string>
    <string name="min">min</string>
    <string name="the_day">Day</string>
    <string name="explanation">Explanation</string>
    <string name="repetition">Repetition</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="time">time</string>
    <string name="building">Building</string>
    <string name="classroom">Classroom</string>
    <string name="addDropClasses">Add/Drop Classes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="newTask">New Daily Task</string>
    <string name="newTaskExp">add new task to your daily routine</string>
    <string name="button1">Classes</string>
    <string name="newClass">New Extra Class</string>
    <string name="myRoutine">My Routine</string>
    <string name="routine">Routine</string>
    <string name="button2">Attendance</string>
    <string name="button3">Settings</string>
    <string name="button4">Notes</string>
    <string name="button5">Tasks</string>
    <string name="button6">GPS\nMode</string>
    <string name="buttonAdd">+ Add</string>
    <string name="classname">Class Name</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="teacher">Lecturer</string>
    <string name="repeat">Repeat</string>
    <string name="hour">Hour</string>
    <string name="code">Code:</string>
    <string name="crn">CRN:</string>
    <string name="routineTask">Routine Task</string>
    <string name="att">Att.</string>
    <string name="room">Room</string>
    <string name="date">Date</string>
    <string name="task">Task</string>
    <string name="location">Location</string>
</resources>
