<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/activity"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/explanation"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="8dp"
        android:background="@drawable/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingLeft="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/start"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="8dp"
        android:background="@drawable/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:paddingLeft="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/end"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/reminder"
            android:textSize="25dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:paddingLeft="4dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/from_activity"
        android:textSize="20dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ListView
            android:id="@+id/l1"
            android:layout_width="53dp"
            android:layout_height="40dp"/>

        <TextView
            android:paddingTop="7dp"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/day"
            android:textSize="20dp"/>

        <ListView
            android:id="@+id/l2"
            android:layout_width="53dp"
            android:layout_height="40dp"/>

        <TextView
            android:paddingTop="7dp"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/hour"
            android:textSize="20dp"/>

        <ListView
            android:id="@+id/l3"
            android:layout_width="53dp"
            android:layout_height="40dp"/>

        <TextView
            android:paddingTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/min"
            android:textSize="20dp"/>
        <TextView
            android:paddingTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="0dp"
            android:paddingLeft="10dp"
            android:hint="@string/before"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/repeat"
            android:textSize="20dp"/>
    </LinearLayout>
</LinearLayout>