<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/AddDropClasses"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/myRoutine"
        android:textSize="30sp"
        android:textColor="@color/my_white"
        android:background="@color/my_blue"
        android:gravity="center"/>
    <LinearLayout
        android:background="@color/my_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/monday"
            android:background="@drawable/first_button_shape"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="viewMonday"
            android:text="@string/monday"
            android:textSize="12sp" />

        <Button
            android:id="@+id/tuesday"
            android:background="@drawable/second_button_shape"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="viewTuesday"
            android:text="@string/tuesday"
            android:textSize="12sp" />

        <Button
            android:id="@+id/wednesday"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="viewWednesday"
            android:text="@string/wednesday"
            android:background="@drawable/third_button_shape"
            android:textSize="12sp" />

        <Button
            android:id="@+id/thursday"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="viewThursday"
            android:text="@string/thursday"
            android:background="@drawable/fourth_button_shape"
            android:textSize="12sp" />

        <Button
            android:id="@+id/friday"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="viewFriday"
            android:text="@string/friday"
            android:background="@drawable/last_button_shape"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/grup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>