<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginStart="3dp"
    android:layout_marginEnd="3dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/activity"
                android:textSize="25sp"/>

            <EditText
                android:autofillHints="@string/noHint"
                android:inputType="text"
                android:id="@+id/activity"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView2"
                android:hint="@string/date"
                android:layout_marginTop="8dp"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/datePickerButton"
                style="?android:spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="openDatePicker"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/explanation"
                android:textSize="25sp"/>
            <EditText
                android:autofillHints="@string/noHint"
                android:inputType="text"
                android:gravity="center"
                android:id="@+id/explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm"
                android:textStyle="bold"
                android:textSize="25sp"/>
            <CheckBox
                android:id="@+id/alarm"
                android:layout_marginStart="5dp"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarmLayout"
            android:visibility="visible"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TimePicker
                android:id="@+id/alarm_time_picker"
                android:timePickerMode="spinner"
                android:layout_width="wrap_content"
                android:layout_height="180dp">
            </TimePicker>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/reminder"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <CheckBox
                android:id="@+id/reminder"
                android:layout_marginStart="5dp"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/notificationLayout"
            android:orientation="horizontal"
            android:visibility="gone"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textAlignment="textStart"
                    android:paddingTop="7dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/before"
                    android:textSize="20sp"/>
                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/day_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:np_width="64dp"
                    app:np_height="180dp"
                    app:np_dividerColor="@color/colorPrimary"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="59"
                    app:np_min="0"
                    app:np_selectedTextColor="@color/colorPrimary"
                    app:np_selectedTextSize="17dp"
                    app:np_textColor="@color/colorPrimary"
                    app:np_textSize="17dp"
                    app:np_typeface="@string/roboto_light"
                    app:np_value="3" />

                <TextView
                    android:layout_gravity="center"
                    android:paddingTop="7dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/days"
                    android:textSize="20sp"/>
            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:paddingTop="7dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/at"
                    android:textSize="20sp"/>
                <TimePicker
                    android:id="@+id/notify_time_picker"
                    android:layout_gravity="center"
                    android:timePickerMode="spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp">
                </TimePicker>
                <TextView
                    android:paddingTop="7dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/time"
                    android:textSize="20sp"/>
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="register"
            android:textAllCaps="false"
            android:background="@drawable/rounded_corners"
            android:gravity="center"
            android:text="@string/register" />

        <Button
            android:id="@+id/stop_alarm_button"
            android:visibility="gone"
            android:textStyle="bold"
            android:background="@drawable/rounded_corners"
            android:padding="10dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/stop_alarm"
            android:onClick="stopTheAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextClock
            android:id="@+id/currentTime"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>


</ScrollView>