<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bgapps"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_margin="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="5"
            android:columnOrderPreserved="false"
            android:orientation="horizontal"
            android:rowCount="2">

            <Button
                android:id="@+id/button"
                style="@android:style/Widget.Button"
                android:layout_width="100dp"
                android:layout_height="83dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@color/white"
                android:paddingTop="48dp"
                android:text="@string/button1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:useLevel="false" />

            <Button
                android:id="@+id/button2"
                style="@android:style/Widget.Button"
                android:layout_width="119dp"
                android:layout_height="115dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@color/white"
                android:paddingTop="53dp"
                android:text="@string/button2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                style="@android:style/Widget.Button"
                android:layout_width="91dp"
                android:layout_height="97dp"
                android:layout_row="0"
                android:layout_column="4"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@color/white"
                android:paddingTop="55dp"
                android:paddingRight="13dp"
                android:text="@string/button3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                style="@android:style/Widget.Button"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@color/white"
                android:paddingTop="50dp"
                android:text="@string/button4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button5"
                style="@android:style/Widget.Button"
                android:layout_width="103dp"
                android:layout_height="79dp"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:background="@color/white"
                android:paddingTop="55dp"
                android:paddingRight="10dp"
                android:text="@string/button5"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button6"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/white"
                android:paddingTop="40dp"
                android:paddingRight="10dp"
                style="@android:style/Widget.Button"
                android:layout_row="1"
                android:layout_column="4"
                android:layout_gravity="fill"
                android:layout_margin="12dp"
                android:text="@string/button6" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="123dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:src="@drawable/mybook" />

            <ImageView
                android:layout_width="132dp"
                android:layout_height="134dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnSpan="2"
                android:src="@drawable/checklist" />

            <ImageView
                android:layout_width="116dp"
                android:layout_height="95dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:src="@drawable/edit" />

            <ImageView
                android:layout_width="136dp"
                android:layout_height="84dp"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_columnSpan="2"
                android:src="@drawable/calender" />

            <ImageView
                android:layout_width="115dp"
                android:layout_height="104dp"
                android:layout_row="1"
                android:layout_column="4"
                android:layout_columnSpan="1"
                android:src="@drawable/location" />

            <ImageView
                android:layout_width="110dp"
                android:layout_height="94dp"
                android:layout_row="0"
                android:layout_column="4"
                android:layout_columnSpan="1"
                android:layout_marginTop="15dp"
                android:src="@drawable/settings_blue" />


        </GridLayout>

        <GridLayout

            android:columnCount="5"
            android:rowCount="1"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@drawable/line"
            android:layout_height="wrap_content">

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:layout_margin="12dp"
                android:layout_columnSpan="1"
                android:text="@string/today"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_column="1"
                android:layout_row="0"
                android:layout_margin="12dp"
                android:paddingLeft="23dp"
                android:textColor="@color/black"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:gravity="center"
                android:text="@string/classname"
                android:textSize="20sp" />

            <TextView
                android:layout_column="3"
                android:layout_row="0"
                android:layout_margin="12dp"
                android:layout_columnSpan="1"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_column="4"
                android:layout_row="0"
                android:layout_margin="12dp"
                android:textColor="@color/black"
                android:layout_columnSpan="1"
                android:text="@string/no"
                android:textSize="16sp" />
        </GridLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/derslayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </LinearLayout>


            <Button
                android:id="@+id/buttonEkle"

                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/Add"
                android:textSize="15sp" />
        <TextView
            android:id="@+id/testingDB"
            android:text="test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"></TextView>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>