<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/day_view"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:gravity="center_horizontal"
            android:text="@string/the_day"
            android:textSize="23sp" />
        <TextView
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:id="@+id/class_name_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/day_view"
            android:layout_toStartOf="@+id/attendance_view"
            android:layout_marginTop="2dp"
            android:gravity="center_horizontal"
            android:text="@string/classname"
            android:textSize="23sp"/>
        <TextView
            android:id="@+id/attendance_view"
            android:text="@string/att"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:textSize="23sp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:layout_toStartOf="@+id/infos"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:layout_width="50dp"/>

        <TextView
            android:id="@+id/infos"
            style="@android:style/Widget.DeviceDefault.Light.TextView"
            android:textSize="23sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="2dp"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:layout_width="33dp"/>

    </RelativeLayout>



</ScrollView>